Kubernetes/animal-album-manifests/data-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
  namespace: animal-album
spec:
  selector:
    matchLabels:
      app: data-service
  template:
    metadata:
      labels:
        app: data-service
    spec:
      serviceAccountName: data-service-sa
      containers:
      - name: data-service
        image: sayedimran/animal-data-service:v1.0.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
