Kubernetes/animal-album-manifests/data-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
  namespace: animal-album
spec:
  selector:
    app: data-service
  ports:
  - port: 80
    targetPort: 8080
