Kubernetes/animal-album-manifests/data-service/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data-service
  namespace: animal-album
spec:
  gateways:
  - istio-system/animal-album-gateway
  hosts:
  - "app.devopsguru.engineer"
  http:
  - match:
    - uri:
        prefix: /data/
    rewrite:
      uri: /
    route:
    - destination:
        host: data-service
        port:
          number: 80
